=== 5.0.0.beta1

 * Use OpenSSL for aes*-ctr for up to 5x throughput improvement [Miklós Fazekas, Harald Sitter, #570]
 * Optimize slice! usage in CTR for up to 2x throughput improvement [Harald Sitter, #569]
 * Replace RbNaCl dependency with ed25519 gem [Tony Arcieri ,#563]
 * Add initial Match support [Kasumi Hanazuki,  #553]

=== 4.2.0.rc2

 * Fix double close bug on auth failure (or ruby 2.2 or earlier) [#538]

=== 4.2.0.rc1

 * Improved logging with proxy command [Dmitriy Ivliev, #530]
 * Close transport on proxy error [adamruzicka, #526]
 * Support multiple identity files [Kimura Masayuki, #528]
 * Move `none` cipher to end of cipher list [Brian Cain, #525]
 * Deprecate `:paranoid` in favor of `:verify_host_key` [Jared Beck, #524]
 * Support Multile Include ssh config files [Kasumi Hanazuki, #516]
 * Support Relative path in ssh confif files [Akinori MUSHA, #510]
 * add direct-streamlocal@openssh.com support in Forward class [Harald Sitter, #502]

=== 4.1.0
=== 4.1.0.rc1

 * ProxyJump support [Ryan McGeary, #500]
 * Fix agent detection on Windows [Christian Koehler, #495]

=== 4.1.0.beta1

 * Fix nil error when libsodium is not there [chapmajs ,#488]
 * SSH certificate support for client auth [David Bartley, #485]

=== 4.0.1
=== 4.0.1.rc2

 * ENV["HOME"] might be empty so filter non expandable paths [Matt Casper, #351]

=== 4.0.1.rc1

 * support of rbnacl 4.0 and better error message [#479]
 * support include in config files [Kimura Masayuki, #475]
 * fixed issue with ruby 2.2 or older on windows [#472]

=== 4.0.0
=== 4.0.0.rc3

 * parse `+` character in config files [Christoph Lupprich, #470, #314]

=== 4.0.0.rc2

 * Fixed OpenSSL 2.0/Ruby 2.4.0 warnings [Miklós Fazekas, #468]
 * Added ssh-ed25519 to KnownHosts:SUPPORTED_TYPE [detatka-kuzlatka-otevrete, Miklós Fazekas, #459]
 * Allow nil for :passhrase and passing in nil option is now a depreaction warning [Miklós Fazekas, #465]

=== 4.0.0.rc1
