@@ -1,5 +1,6 @@
 === 5.0.0.beta1
 
+ * Don't leave proxy command as zombie on timeout [DimitriosLisenko, #560]
  * Use OpenSSL for aes*-ctr for up to 5x throughput improvement [Miklós Fazekas, Harald Sitter, #570]
  * Optimize slice! usage in CTR for up to 2x throughput improvement [Harald Sitter, #569]
  * Replace RbNaCl dependency with ed25519 gem [Tony Arcieri ,#563]
